<resources>
    <string name="app_name">GPA_R01745510_Calculator</string>
    <string name="grade_5">Grade 5:</string>
    <string name="grade_4">Grade 4:</string>
    <string name="grade_3">Grade 3:</string>
    <string name="grade_2">Grade 2:</string>
    <string name="grade_1">Grade 1:</string>
    <string name="enter_grade_5">Enter Grade 5</string>
    <string name="enter_grade_4">Enter Grade 4</string>
    <string name="enter_grade_3">Enter Grade 3</string>
    <string name="enter_grade_2">Enter Grade 2</string>
    <string name="enter_grade_1">Enter Grade 1</string>
    <string name="btn_text_compute_gpa">Compute GPA</string>
    <string name="text_gpa">GPA: </string>
</resources>
